# TEMPER-Secure-MLaaS

./: GFLOPs.py  README.md  auto_model_partition.py  bake_params_partition.py  hl_test.py  loading_latency.py  requirements.txt  self_defined_nn.py  stat-params.py
GNMT/: __init__.py  attention.py  decoder.py  encoder.py  gnmt.py  seq2seq_base.py  utils.py
cluster-inference/: .gitignore  README.md  batch_run.sh  build.sh  clean.sh  environment.sh  install_fortanix.sh  install_tvm.sh  run.sh  slave_generator.py  source.txt  worker_generator.py
cluster-inference/attest-client/: Cargo.toml
cluster-inference/attest-client/examples/: attest_client.rs
cluster-inference/attest-client/src/: context.rs
cluster-inference/ra-common/: Cargo.toml
cluster-inference/ra-common/src/: tcp.rs
cluster-inference/ra-enclave/: Cargo.toml
cluster-inference/ra-enclave/examples/: task-enclave.rs
cluster-inference/ra-enclave/src/: attestation_response.rs  context.rs  error.rs  lib.rs  tls_enclave.rs
cluster-inference/ra-sp/: Cargo.toml
cluster-inference/ra-sp/examples/: service_provider.rs  tvm_user.rs
cluster-inference/ra-sp/examples/data/: settings.json
cluster-inference/ra-sp/src/: attestation_response.rs  config.rs  context.rs  error.rs  ias.rs  lib.rs
cluster-inference/scheduler/: Cargo.toml  README.md  build_signed_enclave.sh  config
cluster-inference/scheduler/.cargo/: config
cluster-inference/scheduler/examples/: scheduler.rs
cluster-inference/scheduler/src/: lib.rs  main1.rs  master.rs  thread_client.rs  threadpool.rs  tvm_task_schedule.rs
cluster-inference/sgx-crypto/: Cargo.toml
cluster-inference/sgx-crypto/src/: aes_gcm.rs  certificate.rs  cmac.rs  key_exchange.rs  lib.rs  random.rs  signature.rs  tls_psk.rs
cluster-inference/sgx-task-enclave/: Cargo.toml  build.rs  config
cluster-inference/sgx-task-enclave/src/: build_model.py  main.rs
inference/: Cargo.toml  Cargo.toml.copy  README.md  build.rs  environment.sh  meminfo.sh
inference/src/: build_model.py  main.rs  main.rs.copy  sgx-infer.sh  tvm_test.py
