# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "sgx-task-enclave"
version = "0.1.0"
authors = ["Fabing Li <1349212501@qq.com>"]
edition = "2018"

[features]
default = ["byteorder"]

[dependencies]
tvm-graph-rt = { path = "/home/lww/project/03_TVM/tvm/rust/tvm-graph-rt" }
ndarray = "0.15.2"
rand = "0.8.3"
# mbedtls = {version="0.5", default-features = false, features = ["sgx"]}
# mbedtls = { git = "https://github.com.cnpmjs.org/fortanix/rust-mbedtls.git" }
mbedtls = {path = "/home/lww/project/03_TVM/rust-mbedtls/mbedtls", default-features = false, features = ["no_std_deps"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
sgx-isa = { version = "0.3.1", features = ["sgxstd"] }
sgx-crypto = { path = "../sgx-crypto" }
ra-common = { path = "../ra-common" }
ra-enclave = { path = "../ra-enclave" }
byteorder = { version = "1.3.2", optional = true }

[package.metadata.fortanix-sgx]
# stack size (in bytes) for each thread, the default stack size is 0x20000.
stack-size=0x200000
# heap size (in bytes), the default heap size is 0x2000000.
heap-size=0x8000000
# the default number of threads is equal to the number of available CPUs of
# the current system.
# Gotcha: Don't forget to count the main thread when counting number of
# threads.
# threads=10
# SSA frame size (in pages) for each thread, the default SSA frame size is 1.
# You normally don't need to change the SSA frame size.
# ssaframesize=1
# whether to enable EDP debugging features in the enclave, debugging is
# enabled by default.
debug=true

# [patch.crates-io]
# "backtrace" = { git = "https://github.com/nhynes/backtrace-rs", branch = "fix-sgx" }
